--- a/kwitter_room.html
+++ b/kwitter_room.html
@@ -4,10 +4,38 @@
     <title>
         Chat
     </title>
+    <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="style2.css">
 </head>
 
-<body>
+<body background="spe.jpg">
+    <button id="logout" class="glyphicon glyphicon-log-out btn btn-danger" onclick="logout()">Logout</button>
+    <center>
+        <h1> Let us Chat</h1>
+        <sup>
+        <h2 id="wel">
+        </sup>
+        </h1>
+        <h3> Let's create chat room </h3>
+        <input id="chat_box" type="text" placeholder="Enter Name for your Chat Room">
+        <br> <br>
+        <button onclick="addRoom()" class="button"> Add </button>
+        <br> <br> <br>
+        <label id="room"> #TrendingRooms </label>
+        <div> </div>
 
+    </center>
 </body>
 
 </html>
