--- a/kwitter_room.html
+++ b/kwitter_room.html
@@ -17,6 +17,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="style2.css">
+    <script src="kwiiter_room.js"></script>
 </head>
 
 <body background="spe.jpg">
@@ -30,12 +31,13 @@
         <h3> Let's create chat room </h3>
         <input id="chat_box" type="text" placeholder="Enter Name for your Chat Room">
         <br> <br>
-        <button onclick="addRoom()" class="button"> Add </button>
+        <button class="button" onclick="addRoom()"> Add </button>
         <br> <br> <br>
         <label id="room"> #TrendingRooms </label>
         <div> </div>
 
     </center>
+
 </body>
 
 </html>
